Se incorporan objetos y arrays al proyecto

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <nav></nav>
 <main></main>
 <footer></footer>
+<script src="./clases/Usuario.js"></script>
+<script src="./clases/Entrenamiento.js" ></script>
 <script src="./script.js"></script>
 </body>
 </html>
