Se separan las funcionalidades en archivos. se terminan de hacer las funciones

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Simulador Interactivo de Personal Trainer</title>
 </head>
 <body>
     <header> 
@@ -13,8 +13,11 @@
     <nav></nav>
 <main></main>
 <footer></footer>
+<script src="./mockupUsuarios.js" ></script>
+<script src="./funciones.js"></script>
 <script src="./clases/Usuario.js"></script>
 <script src="./clases/Entrenamiento.js" ></script>
+<script src="./tiposDeEntrenamiento.js" ></script>
 <script src="./script.js"></script>
 </body>
 </html>
