--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
     <title>Simulador Interactivo de Personal Trainer</title>
 </head>
 <body>
+    <nav class="navegador">
+        <ul id="ul">
+            <li><a href="./pages/login.html">Soy Usuario</a></li>
+            <li><a href="./pages/registroUsuario.html">Usuario Nuevo</a></li>
+        </ul>
+    </nav>
     <header> 
         <h1>Simulador Interactivo de Personal Trainer</h1>
     </header>
-    <nav></nav>
+    
 <main></main>
 <footer></footer>
-<script src="./mockupUsuarios.js" ></script>
-<script src="./funciones.js"></script>
+<script src="./archivosJS/mockupUsuarios.js" ></script>
+<script src="./archivosJS/funciones.js"></script>
 <script src="./clases/Usuario.js"></script>
 <script src="./clases/Entrenamiento.js" ></script>
-<script src="./tiposDeEntrenamiento.js" ></script>
-<script src="./script.js"></script>
+<script src="./archivosJS/tiposDeEntrenamiento.js" ></script>
+<script src="./archivosJS/mainIndex.js" ></script>
+<!-- <script src="./archivosJS/script.js"></script> -->
 </body>
 </html>
