--- a/pages/cargaDeDatos.html
+++ b/pages/cargaDeDatos.html
@@ -81,6 +81,7 @@
     </div>
     <div id="contenedorMensaje"></div>
     <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>
+    <script src="../archivosJS/mockupUsuarios.js"></script>
     <script src="../archivosJS/funciones.js"></script>
     <script src="../clases/Usuario.js"></script>
     <script src="../clases/Entrenamiento.js"></script>
