--- a/pages/miRutina.html
+++ b/pages/miRutina.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi rutina</title>
+    <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-    
+    <script src="../archivosJS/mockupUsuarios.js"></script>
+    <script src="../archivosJS/tiposDeEntrenamiento.js"></script>
     <script src="../clases/Entrenamiento.js"></script>
     <script src="../clases/Usuario.js"></script>
     <script src="../archivosJS/funciones.js"></script>
