se agrega fetch y mockup de ejercicios

--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/7286fe37dd.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Simulador Interactivo de Personal Trainer</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navegador">
-        <ul id="ul">
-            <li><a href="./pages/login.html">Soy Usuario</a></li>
-            <li><a href="./pages/registroUsuario.html">Usuario Nuevo</a></li>
-        </ul>
+      <i class="fa-solid fa-bars"></i>
+      <ul id="ul">
+        <li class="remover"><a href="./pages/login.html">Soy Usuario</a></li>
+        <li class="remover">
+          <a href="./pages/registroUsuario.html">Usuario Nuevo</a>
+        </li>
+      </ul>
     </nav>
-    <header> 
-        <h1>Simulador Interactivo de Personal Trainer</h1>
+    <header>
+      <h1>Simulador Interactivo de Personal Trainer</h1>
     </header>
-    
-<main></main>
-<footer></footer>
-<script src="./archivosJS/mockupUsuarios.js" ></script>
-<script src="./archivosJS/funciones.js"></script>
-<script src="./clases/Usuario.js"></script>
-<script src="./clases/Entrenamiento.js" ></script>
-<script src="./archivosJS/tiposDeEntrenamiento.js" ></script>
-<script src="./archivosJS/mainIndex.js" ></script>
-<!-- <script src="./archivosJS/script.js"></script> -->
-</body>
+
+    <main></main>
+    <footer></footer>
+    <script src="./archivosJS/mockupUsuarios.js"></script>
+    <script src="./archivosJS/funciones.js"></script>
+    <script src="./clases/Usuario.js"></script>
+    <script src="./clases/Entrenamiento.js"></script>
+    <script src="./archivosJS/tiposDeEntrenamiento.js"></script>
+    <script src="./archivosJS/mainIndex.js"></script>
+    <!-- <script src="./archivosJS/script.js"></script> -->
+  </body>
 </html>
