se agregan JSON de ejercicios

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav class="navegador">
       <i class="fa-solid fa-bars"></i>
       <ul id="ul">
-        <li class="remover"><a href="./pages/login.html">Soy Usuario</a></li>
+        <li class="remover"><a class="btn btn-primary btn-block btn-large" href="./pages/login.html">Soy Usuario</a></li>
         <li class="remover">
-          <a href="./pages/registroUsuario.html">Usuario Nuevo</a>
+          <a class="btn btn-primary btn-block btn-large" href="./pages/registroUsuario.html">Usuario Nuevo</a>
         </li>
       </ul>
     </nav>
