--- a/pages/login.html
+++ b/pages/login.html
@@ -38,6 +38,7 @@
     <script src="../clases/Entrenamiento.js"></script>
     <script src="../clases/Usuario.js"></script>
     <script src="../archivosJS/funciones.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../archivosJS/mainLogIn.js"></script>
   </body>
 </html>
