--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -52,6 +52,7 @@
 
     <script src="../archivosJS/mockupUsuarios.js"></script>
     <script src="../archivosJS/funciones.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../archivosJS/mainUsuarioNuevo.js"></script>
   </body>
 </html>
